--- a/2025/Les_BZ/BZ_M SURFRIDER/style.css
+++ b/2025/Les_BZ/BZ_M SURFRIDER/style.css
@@ -96,6 +96,7 @@
     height: 470px;
   }
 }
+
 @media screen and (max-width: 767px){
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER{
     min-height: 290px;
@@ -107,29 +108,36 @@
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER img.logo{
     width: 44px;
   }
+  .product-item.breaking-zone.PE25-TF5-M-SURFRIDER h4.PL {
+    margin: 10px 0 10px;
+  }
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER h4 {
     font-size: 12px;
     line-height: 20px;
     letter-spacing: 3px;
-    margin: 10px 0 15px;
+    margin: 10px 0 10px;
   }
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER p.txt-1 {
     font-size: 10px;
     line-height: 14px;
     margin-bottom: 10px;
   }
+  .product-item.breaking-zone.PE25-TF5-M-SURFRIDER p.txt-1.PL {
+    font-size: 9px;
+    line-height: 14px;
+    margin-bottom: 3px;
+  }
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER a {
     font-size: 11px;
   }
 }
-
 @media screen and (max-width: 390px){
   .product-item.breaking-zone.PE25-TF5-M-SURFRIDER h4 {
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 2px;
   }
-  .product-item.breaking-zone.PE25-TF5-M-SURFRIDER p.txt-1 {
+  .product-item.breaking-zone.PE25-TF5-M-SURFRIDER p.txt-1, .product-item.breaking-zone.PE25-TF5-M-SURFRIDER p.txt-1.PL {
     font-size: 8px;
     line-height: 12px;
     letter-spacing: 1px;
